[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/LevelScenes/BaseScenes/WorldMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/LevelScenes/BaseScenes/WorldMapPlayerMarker.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/PlayerScripts/WorldMapPlayerMarker.gd" type="Script" id=3]
[ext_resource path="res://OtherHolder/rm-albion/RM Albion font medium.tres" type="DynamicFont" id=4]
[ext_resource path="res://OtherHolder/MenuBG01.01.png" type="Texture" id=5]
[ext_resource path="res://OtherHolder/rm-albion/RM Albion font big.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/MenuScenes/PauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Scene_Shop.tscn" type="PackedScene" id=8]
[ext_resource path="res://Music/Heavy Interlude.ogg" type="AudioStream" id=9]

[sub_resource type="SphereShape" id=1]

radius = 0.103756

[node name="WorldMapLevel" type="Spatial"]

[node name="WorldMap" parent="." index="0" instance=ExtResource( 1 )]

[node name="WorldMapPlayerMarker" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 42.3991, 11.2819, 14.2 )
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="WorldMapCam" type="Camera" parent="WorldMapPlayerMarker" index="2"]

transform = Transform( 1, 0, 0, 0, 0.34202, 0.939693, 0, -0.939693, 0.34202, 0, 44, 17 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="SavePopup" type="PopupDialog" parent="WorldMapPlayerMarker" index="3"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -138.0
margin_right = 95.0
margin_bottom = 137.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
_sections_unfolded = [ "Rect" ]

[node name="SaveButton1" type="Button" parent="WorldMapPlayerMarker/SavePopup" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.5
margin_top = -127.5
margin_right = 85.5
margin_bottom = -84.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save File 01"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="SaveButton2" type="Button" parent="WorldMapPlayerMarker/SavePopup" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.5
margin_top = -74.5
margin_right = 85.5
margin_bottom = -31.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save File 02"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="SaveButton3" type="Button" parent="WorldMapPlayerMarker/SavePopup" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.5
margin_top = -24.5
margin_right = 85.5
margin_bottom = 18.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save File 03"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="SaveButton4" type="Button" parent="WorldMapPlayerMarker/SavePopup" index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.5
margin_top = 25.5
margin_right = 85.5
margin_bottom = 68.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save File 04"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="CancelButton" type="Button" parent="WorldMapPlayerMarker/SavePopup" index="4"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.5
margin_top = -62.0
margin_right = 48.5
margin_bottom = -19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Cancel"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="WorldHud" type="Control" parent="WorldMapPlayerMarker" index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="BGContainer" type="Control" parent="WorldMapPlayerMarker/WorldHud" index="0"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -535.0
margin_right = 20.0
margin_bottom = -495.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="NinePatchRect" type="NinePatchRect" parent="WorldMapPlayerMarker/WorldHud/BGContainer" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -213.0
margin_top = -20.0
margin_right = 249.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
patch_margin_top = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Patch Margin", "Rect" ]

[node name="NinePatchRect2" type="NinePatchRect" parent="WorldMapPlayerMarker/WorldHud/BGContainer" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = 35.0
margin_right = 173.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
patch_margin_top = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Patch Margin", "Rect" ]

[node name="NinePatchRect3" type="NinePatchRect" parent="WorldMapPlayerMarker/WorldHud/BGContainer" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.0
margin_top = 90.0
margin_right = 110.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
patch_margin_left = 4
patch_margin_top = 8
patch_margin_right = 4
patch_margin_bottom = 8
_sections_unfolded = [ "Patch Margin", "Rect" ]

[node name="WorldLabel01" type="Label" parent="WorldMapPlayerMarker/WorldHud" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -342.0
margin_top = 192.0
margin_right = 341.0
margin_bottom = 244.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "Label01"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="WorldLabel02" type="Label" parent="WorldMapPlayerMarker/WorldHud" index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -342.0
margin_top = -192.0
margin_right = 341.0
margin_bottom = -140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "Label02"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="WorldLabel03" type="Label" parent="WorldMapPlayerMarker/WorldHud" index="3"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_top = -26.0
margin_right = 683.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "Label03"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="WorldLabel04" type="Label" parent="WorldMapPlayerMarker/WorldHud" index="4"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -683.0
margin_top = -26.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "Label04"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="WorldLabel05" type="Label" parent="WorldMapPlayerMarker/WorldHud" index="5"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -61.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "Label05"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="WorldLabel06" type="Label" parent="WorldMapPlayerMarker/WorldHud" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 63.0
margin_bottom = 114.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "T - Save Options"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="WorldLabel07" type="Label" parent="WorldMapPlayerMarker/WorldHud" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 118.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "I - Shop"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="WorldLabel08" type="Label" parent="WorldMapPlayerMarker/WorldHud" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 8.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "World Map"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="PauseMenu" parent="WorldMapPlayerMarker" index="5" instance=ExtResource( 7 )]

[node name="Shop" parent="WorldMapPlayerMarker" index="6" instance=ExtResource( 8 )]

[node name="WorldMapMarkersHolder" type="Spatial" parent="." index="2"]

editor/display_folded = true

[node name="RespawnPoint" type="Spatial" parent="WorldMapMarkersHolder" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 42.3983, 11.4045, 14.1085 )

[node name="Marker01" type="StaticBody" parent="WorldMapMarkersHolder" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 42.3983, 11.4045, 14.1085 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="WorldMapMarkersHolder/Marker01" index="0"]

shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Marker02" type="StaticBody" parent="WorldMapMarkersHolder" index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 41.1936, 11.4045, 28.9668 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape2" type="CollisionShape" parent="WorldMapMarkersHolder/Marker02" index="0"]

shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Marker03" type="StaticBody" parent="WorldMapMarkersHolder" index="3"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 34.3662, 11.4045, 56.3305 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape3" type="CollisionShape" parent="WorldMapMarkersHolder/Marker03" index="0"]

shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Marker04" type="StaticBody" parent="WorldMapMarkersHolder" index="4"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -65.902, 7.93625, -1.44234 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape4" type="CollisionShape" parent="WorldMapMarkersHolder/Marker04" index="0"]

shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Marker05" type="StaticBody" parent="WorldMapMarkersHolder" index="5"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -78.9675, 7.93625, -24.9455 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape5" type="CollisionShape" parent="WorldMapMarkersHolder/Marker05" index="0"]

shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Marker06" type="StaticBody" parent="WorldMapMarkersHolder" index="6"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -68.6819, 7.93625, -22.6646 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape6" type="CollisionShape" parent="WorldMapMarkersHolder/Marker06" index="0"]

shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Marker07" type="StaticBody" parent="WorldMapMarkersHolder" index="7"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1773, 7.93625, -93.8836 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape7" type="CollisionShape" parent="WorldMapMarkersHolder/Marker07" index="0"]

shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Marker08" type="StaticBody" parent="WorldMapMarkersHolder" index="8"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.18954, 7.93625, -111.544 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape8" type="CollisionShape" parent="WorldMapMarkersHolder/Marker08" index="0"]

shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Marker09" type="StaticBody" parent="WorldMapMarkersHolder" index="9"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.7209, 7.93625, -106.909 )
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape9" type="CollisionShape" parent="WorldMapMarkersHolder/Marker09" index="0"]

shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]

pause_mode = 2
stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "MusicBus"
_sections_unfolded = [ "Pause" ]

[connection signal="pressed" from="WorldMapPlayerMarker/SavePopup/SaveButton1" to="WorldMapPlayerMarker" method="_on_SaveButton1_pressed"]

[connection signal="pressed" from="WorldMapPlayerMarker/SavePopup/SaveButton2" to="WorldMapPlayerMarker" method="_on_SaveButton2_pressed"]

[connection signal="pressed" from="WorldMapPlayerMarker/SavePopup/SaveButton3" to="WorldMapPlayerMarker" method="_on_SaveButton3_pressed"]

[connection signal="pressed" from="WorldMapPlayerMarker/SavePopup/SaveButton4" to="WorldMapPlayerMarker" method="_on_SaveButton4_pressed"]

[connection signal="pressed" from="WorldMapPlayerMarker/SavePopup/CancelButton" to="WorldMapPlayerMarker" method="_on_CancelButton_pressed"]


